--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Background HLS Video</title>
+  
+  <title>27</title>
   <link rel="stylesheet" href="style.css" />
 
-
+  <link rel="icon" type="image/svg+xml" href="images/27.svg" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>cyberglide</title>
@@ -14,21 +15,21 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   
   <!-- SEO Meta Tags -->
-  <meta name="description" content="Cyberglide - The most futuristic bike with over 100 miles of range. Experience the future of e-bikes.">
+  <meta name="description" content="27 - Under 27Kg, 50MPH+, Over 100 miles of range. Experience the future.">
   <meta name="keywords" content="cyberglide, e-bike, futuristic bike, electric bike, long range e-bike">
-  <meta name="author" content="cyberglide">
+  <meta name="author" content="Adam Jirovec | Philip Pounds">
 
   <!-- Open Graph Meta Tags for Social Media -->
-  <meta property="og:title" content="cyberglide - The Future of E-Bikes">
-  <meta property="og:description" content="Cyberglide - The most futuristic bike with over 100 miles of range. Experience the future of e-bikes.">
+  <meta property="og:title" content="27 - The Difference Between Hot and Not">
+  <meta property="og:description" content="27 - Under 27Kg, 50MPH+, Over 100 miles of range. Experience the future.">
   <meta property="og:image" content="https://raw.githubusercontent.com/Cyberbike/website/main/image2.jpg">
   <meta property="og:url" content="https://cyberglide.tech">
   <meta property="og:type" content="website">
 
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="cyberglide - The Future of E-Bikes">
-  <meta name="twitter:description" content="Cyberglide - The most futuristic bike with over 100 miles of range. Experience the future of e-bikes.">
+  <meta name="twitter:title" content="27 - The Difference Between Hot and Not">
+  <meta name="twitter:description" content=27 - Under 27Kg, 50MPH+, Over 100 miles of range. Experience the future.>
   <meta name="twitter:image" content="https://raw.githubusercontent.com/Cyberbike/website/main/image2.jpg">
 
 </head>
