--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!-- Open Graph Meta Tags for Social Media -->
   <meta property="og:title" content="27 - The Difference Between Hot and Not">
   <meta property="og:description" content="27 - Under 27Kg, 50MPH+, Over 100 miles of range. Experience the future.">
-  <meta property="og:image" content="https://raw.githubusercontent.com/Cyberbike/website/main/image2.jpg">
+  <meta property="og:image" content="https://github.com/Cyberbike/video_site/blob/main/images/banner_image.jpg">
   <meta property="og:url" content="https://cyberglide.tech">
   <meta property="og:type" content="website">
 
@@ -30,7 +30,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="27 - The Difference Between Hot and Not">
   <meta name="twitter:description" content=27 - Under 27Kg, 50MPH+, Over 100 miles of range. Experience the future.>
-  <meta name="twitter:image" content="https://raw.githubusercontent.com/Cyberbike/website/main/image2.jpg">
+  <meta name="twitter:image" content="https://github.com/Cyberbike/video_site/blob/main/images/banner_image.jpg">
 
 </head>
 <body>
