--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="style.css" />
 
   <link rel="icon" type="image/svg+xml" href="images/27.svg" />
+  <link rel="alternate icon" href="images/27.png" type="image/png" />
+<link rel="apple-touch-icon" href="images/27.png" />
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>cyberglide</title>
