--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <section class="hero">
           <div class="container">
             <h1 id="type"></h1>
-            <h2><a href="https://forms.gle/jXG4AVkMxUDea8DV9" id="fade" target="_blank" style="opacity:0;">Ride 27</a></h2>
+            <h2><a href="https://docs.google.com/forms/d/e/1FAIpQLScpEAYxEZV8WUr5mvgGUqxITiL8vT0wBalk7V3rH5sWmxJXaA/viewform?usp=header" id="fade" target="_blank" style="opacity:0;">Ride 27</a></h2>
           </div>
       </div>
       </section>
